Fixed icon misalignment

--- a/src/assets/styles/cards.css
+++ b/src/assets/styles/cards.css
@@ -264,3 +264,13 @@ li.tag {
   border-style: solid;
   border-width: 11px;
 }
+
+.pin {
+  position: absolute;
+  right: 15px;
+  top: 10px;
+  font-weight: normal;
+  font-size: 2em !important;
+  color: white !important;
+  cursor: pointer;
+}
